ingress/ingresspromgraf.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: monitoring
spec:
  rules:
  - host: monitor.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
